--- a/pages/goods_V1.html
+++ b/pages/goods_V1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
     <head>
@@ -90,7 +89,7 @@
                             <img class="product-image" src="../images/goods1.jpg" alt="Фото товара 1">
                         </div>
                         <h3 class="product-name">Буст ММР Рекрут - Титан</h3>
-                        <p class="product-price">2 Доллара /1 игра</p>
+                        <p class="product-price">500 Долларов /1 игра</p>
                     </div>
                     
                     <div class="product-card position-relative">
@@ -101,10 +100,10 @@
                                 -20%
                             </div>
                         </div>
-                        <h3 class="product-name">Аркана на шедоу финда</h3>
+                        <h3 class="product-name">Аркана на шейкера</h3>
                         <div class="price-container">
-                            <p class="old-price mb-1">1600 RUB</p>
-                            <p class="product-price text-warning fw-bold">2000 RUB</p>
+                            <p class="old-price mb-1">12462 RUB</p>
+                            <p class="product-price text-warning fw-bold">9970 RUB</p>
                         </div>
                     </div>
                     
@@ -112,12 +111,12 @@
                         <div class="product-image-container">
                             <img class="product-image" src="../images/goods3.jpg" alt="Фото товара 3">
                         </div>
-                        <h3 class="product-name">Аркана на МК</h3>
-                        <p class="product-price">100 $</p>
+                        <h3 class="product-name">Аркана на войда</h3>
+                        <p class="product-price">117.5 $</p>
                     </div>
                 </div>
             </div>
-            <div class="footer">2025 ООО "ZXC Comunity"</div>    
+            <div class="footer">2025 ООО "zxc COMUNITY"</div>    
         </div>
 
         <!-- Bootstrap JS -->
