--- a/pages/news.html
+++ b/pages/news.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости - Евтушенко Гордея
-    </title>
+    <title>Новости - Евтушенко Гордей</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body class="bg-dark">
     <header class="bg-dark border-bottom border-warning">
         <div class="container py-3">
-            <h1 class="h3 text-center mb-0 text-white">Новости Евтушенко Гордея</h1>
+            <h1 class="h3 text-center mb-0 text-white">Новости Евтушенко Гордей</h1>
         </div>
     </header>
 
@@ -41,7 +40,7 @@
                 <div class="card bg-dark border-warning mb-4">
                     <div class="card-body">
                         <h2 class="card-title h4 text-white">Завершил курс по React.js</h2>
-                        <div class="text-warning mb-3">15.01.2024 14:30 Г. Е. Евтушенко</div>
+                        <div class="text-warning mb-3">15.01.2024 14:30 Евтушенко Гордей</div>
                         <p class="card-text" style="color: #e2e8f0; font-size: 1.1rem; line-height: 1.6;">
                             Успешно завершил интенсивный курс по React.js. Освоил создание компонентов, работу с состояниями, 
                             хуками и маршрутизацией. Начал работу над первым полноценным React-приложением.
@@ -57,7 +56,7 @@
                 <div class="card bg-dark border-info mb-4">
                     <div class="card-body">
                         <h2 class="card-title h4 text-white">Участие в хакатоне</h2>
-                        <div class="text-info mb-3">05.01.2024 11:15 Г. Е. Евтушенко</div>
+                        <div class="text-info mb-3">05.01.2024 11:15 Евтушенко Гордей</div>
                         <p class="card-text" style="color: #e2e8f0; font-size: 1.1rem; line-height: 1.6;">
                             Принял участие в студенческом хакатоне по веб-разработке. Наша команда разработала 
                             прототип приложения для управления задачами с использованием Bootstrap и JavaScript. 
@@ -74,7 +73,7 @@
                 <div class="card bg-dark border-success mb-4">
                     <div class="card-body">
                         <h2 class="card-title h4 text-white">Новый проект: Интернет-магазин</h2>
-                        <div class="text-success mb-3">25.12.2023 16:45  Г. Е. Евтушенко</div>
+                        <div class="text-success mb-3">25.12.2023 16:45  Евтушенко Гордей</div>
                         <p class="card-text" style="color: #e2e8f0; font-size: 1.1rem; line-height: 1.6;">
                             Запустил в разработку новый проект - полнофункциональный интернет-магазин. 
                             В проекте используются современные технологии фронтенда и планируется интеграция 
@@ -92,7 +91,7 @@
                 <div class="card bg-dark border-warning">
                     <div class="card-body">
                         <h2 class="card-title h4 text-white">Изучение Git и GitHub</h2>
-                        <div class="text-warning mb-3">10.12.2023 09:20 Г. Е. Евтушенко </div>
+                        <div class="text-warning mb-3">10.12.2023 09:20 Евтушенко Гордей</div>
                         <p class="card-text" style="color: #e2e8f0; font-size: 1.1rem; line-height: 1.6;">
                             Освоил систему контроля версий Git и начал активно использовать GitHub для хранения 
                             своих проектов. Теперь все проекты доступны в репозиториях с подробными описаниями 
@@ -111,7 +110,7 @@
 
     <footer class="bg-dark text-warning text-center py-3 border-top border-warning mt-5">
         <div class="container">
-            <p class="mb-0">2025 ООО "ZXC Comunity"</p>
+            <p class="mb-0">2025 ООО "zxc COMUNITY"</p>
         </div>
     </footer>
 
