--- a/pages/goods.html
+++ b/pages/goods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товары - Евиушенко Гордея</title>
+    <title>Товары - Евтушенко Гордей</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Ваши стили -->
@@ -38,7 +38,7 @@
     <!-- Header -->
     <header class="bg-dark border-bottom border-warning">
         <div class="container py-3">
-            <h1 class="h3 text-center mb-0 text-white">Товары Евиушенко Гордея</h1>
+            <h1 class="h3 text-center mb-0 text-white">Товары Евтушенко Гордея</h1>
         </div>
     </header>
 
@@ -101,8 +101,8 @@
                     </span>
                     <img src="../images/goods2.jpg" class="card-img-top p-3" alt="Аркана на шейкера" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
-                        <h3 class="card-title h5 text-white">Аркана на шедоу финда</h3>
-                        <p class="product-description mb-2">Эксклюзивная аркана для Shadow Fiend. Сущность тьмы Demon eater!</p>
+                        <h3 class="card-title h5 text-white">Аркана на шейкера</h3>
+                        <p class="product-description mb-2">Эксклюзивная аркана для Earthshaker. Огромные трещины и спецэффекты!</p>
                         <div class="price-container">
                             <p class="old-price mb-1">12462 RUB</p>
                             <p class="h5 text-warning mb-0 fw-bold">9970 RUB</p>
@@ -176,7 +176,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-warning text-center py-3 border-top border-warning mt-5">
         <div class="container">
-            <p class="mb-0">2025 ООО "ZXC Comunity"</p>
+            <p class="mb-0">2025 ООО "zxc COMUNITY"</p>
         </div>
     </footer>
 
