--- a/pages/practices.html
+++ b/pages/practices.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практики - Евтушенко Гордея</title>
+    <title>Практики - Евтушенко Гордей</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body class="bg-dark">
     <header class="bg-dark border-bottom border-warning">
         <div class="container py-3">
-            <h1 class="h3 text-center mb-0 text-white">Практики Евтушенко Гордея</h1>
+            <h1 class="h3 text-center mb-0 text-white">Практики Евтушенко Гордей</h1>
         </div>
     </header>
 
@@ -138,7 +138,7 @@
 
     <footer class="bg-dark text-warning text-center py-3 border-top border-warning mt-5">
         <div class="container">
-            <p class="mb-0">2025 ООО "ZXC Comunity"</p>
+            <p class="mb-0">2025 ООО "zxc COMUNITY"</p>
         </div>
     </footer>
 
