--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+]<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -172,7 +172,7 @@
                     </ul>
                     <div class="mt-3">
                         <a href="#" class="btn btn-warning me-2">Живая версия</a>
-                        <a href="#" class="btn btn-outline-warning">Исходный код</a>
+                        <a href="https://github.com/Hirako4/frontend-and-backend-practice" class="btn btn-outline-warning">Исходный код</a>
                     </div>
                 </div>
             </div>
