Описание изменений, например: добавлен новый компонент или исправлена ошибка

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -175,7 +175,7 @@
                         <div class="achievements">
                             <div class="achievement-item text-center mb-3">
                                 <i class="bi bi-trophy-fill text-warning" style="font-size: 2rem;"></i>
-                                <p class="text-light mb-0 mt-2">Завершил 2 проекта</p>
+                                <p class="text-light mb-0 mt-2">завершил 2 проекта</p>
                             </div>
                             <div class="achievement-item text-center">
                                 <i class="bi bi-star-fill text-info" style="font-size: 2rem;"></i>
