--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,4 +1,4 @@
-]<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -6,8 +6,31 @@
     <title>Проекты - Евтушенко Гордей</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/styles.css">
+
+    <!-- Стили для skip-link -->
+    <style>
+        .skip-link {
+            position: absolute;
+            top: -40px;
+            left: 6px;
+            background: #ffc107; /* Жёлтый — как у тебя в акцентах */
+            color: #000;
+            padding: 8px 12px;
+            text-decoration: none;
+            font-weight: bold;
+            z-index: 1000;
+            border-radius: 4px;
+        }
+
+        .skip-link:focus {
+            top: 8px; /* Появляется при фокусе (например, при нажатии Tab) */
+        }
+    </style>
 </head>
 <body class="bg-dark">
+    <!-- Skip link для доступности -->
+    <a class="skip-link" href="#main-content">Перейти к содержимому</a>
+
     <header class="bg-dark border-bottom border-warning">
         <div class="container py-3">
             <div class="d-flex align-items-center justify-content-center">
@@ -34,7 +57,7 @@
         </div>
     </nav>
 
-    <main class="container my-5">
+    <main id="main-content" class="container my-5">
         <h1 class="text-center mb-5 text-white">Мои проекты</h1>
         
         <!-- Filters -->
