--- a/pages/diary.html
+++ b/pages/diary.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body class="bg-dark">
+    <a class="skip-link" href="#main-content">Перейти к содержимому</a>
     <header class="bg-dark border-bottom border-warning">
         <div class="container py-3">
             <div class="d-flex align-items-center justify-content-center">
