--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body class="bg-dark">
-
+<a class="skip-link" href="#main-content">Перейти к содержимому</a>
     <!-- Header -->
     <header class="bg-dark border-bottom border-warning">
         <div class="container py-3">
