--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -38,7 +38,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="container my-5">
+  <main id="main-content" class="container my-5">
         <h1 class="text-center mb-5 text-white">Свяжитесь со мной</h1>
 
         <div class="row g-4">
