--- a/pages/diary.html
+++ b/pages/diary.html
@@ -46,7 +46,7 @@
         </div>
     </nav>
 
-    <main class="container my-5">
+   <main id="main-content" class="container my-5">
         <h1 class="text-center mb-5 text-white">Мой учебный прогресс</h1>
         
         <div class="row g-4">
