--- a/pages/diary.html
+++ b/pages/diary.html
@@ -6,17 +6,37 @@
     <title>Дневник - Евтушенко Гордей </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/styles.css">
+    
     <style>
-        .progress-course {
-            height: 25px;
-        }
-        .completed {
-            color: #28a745 !important;
-        }
-        .in-progress {
-            color: #ffc107 !important;
-        }
-    </style>
+    /* Твои существующие стили */
+    .progress-course {
+        height: 25px;
+    }
+    .completed {
+        color: #28a745 !important;
+    }
+    .in-progress {
+        color: #ffc107 !important;
+    }
+
+    /* === НОВОЕ: стили для skip-link === */
+    .skip-link {
+        position: absolute;
+        top: -40px;
+        left: 6px;
+        background: #ffc107;
+        color: #000;
+        padding: 8px 12px;
+        text-decoration: none;
+        font-weight: bold;
+        z-index: 1000;
+        border-radius: 4px;
+    }
+
+    .skip-link:focus {
+        top: 8px;
+    }
+</style>
 </head>
 <body class="bg-dark">
     <a class="skip-link" href="#main-content">Перейти к содержимому</a>
