--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -6,6 +6,24 @@
     <title>Контакты - Евтушенко Гордей</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/styles.css">
+        <style>
+        .skip-link {
+            position: absolute;
+            top: -40px;
+            left: 6px;
+            background: #ffc107;
+            color: #000;
+            padding: 8px 12px;
+            text-decoration: none;
+            font-weight: bold;
+            z-index: 1000;
+            border-radius: 4px;
+        }
+
+        .skip-link:focus {
+            top: 8px;
+        }
+    </style>
 </head>
 <body class="bg-dark">
 <a class="skip-link" href="#main-content">Перейти к содержимому</a>
